# movdata

./: README.md  pyproject.toml
data/movies/year=2016/: movieList.json
data/movies/year=2017/: movieList.json
data/movies/year=2018/: movieList.json
data/movies/year=2019/: movieList.json
data/movies/year=2020/: movieList.json
data/movies/year=2021/: movieList.json
src/movdata/: ml.py  movieDetail.py
tests/: test_movieDetail.py  test_movieList.py
~/data/movdata/year=2015/: movieList.json
~/data/movdata/year=2016/: movieList.json
~/data/movdata/year=2017/: movieList.json
~/data/movdata/year=2018/: movieList.json
~/data/movdata/year=2020/: movieList.json
~/data/movdata/year=2021/: movieList.json
